# hotel-recommendations

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/core/: config.py
app/models/: schemas.py
app/services/: gemini.py  maps.py  recommender.py
app/tools/: __init__.py  recommendations.py
